move the htmx demo to the default package